tests/functional/data/transpiler/common/errors/loops/outer_too_big_dimensions.err
outer_too_big_dimensions.cpp:2:34: error: [@outer] argument must be 0, 1, or 2
    2 |     for (int i = 0; i < 10; ++i; @outer(10)) {
      |                                  ^
